card-component/index.css
/* CSS RESET */

html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
  margin: 0;
  padding: 0;
}

/* VARIABLES */
:root {
  --gray: #818181;
  --light-gray-background: #adacac31;
  --blue: #6200ee;
  --ligh-blue-background: #81d6eb36;
  --white: #fff;
}

/* GENERAL STYLES */

body {
  background-color: #f7f7f7;
  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
}

img {
  max-width: 100%;
  height: auto;
}

a {
  text-decoration: none;
}

button {
  background-color: transparent;
  border: none;
  cursor: pointer;
  outline: none;
}

h1 {
  text-align: center;
  padding: 0.4rem;
  font-family: monospace;
  font-size: 2rem;
  margin: 2rem 0 5rem 0;
}

/* UTILITY */
.visually-hidden {
  position: absolute;
  left: 0;
  top: -500px;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

.pos-rel {
  position: relative;
}

.medium-brightness {
  filter: brightness(60%);
}

.top-lr-border {
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.p-5x {
  padding-top: 0.5rem;
}

.s-img {
  width: 120px;
  height: 120px;
}

.flex {
  display: flex;
}

.card-title {
  text-align: center;
}

/* LAYOUT */
.main-wrapper {
  max-width: 1200px;
  margin: 0 auto;
}

main {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
  align-items: flex-start;
  gap: 50px 20px;
}

/* CARD */
.card {
  background-color: white;
  box-shadow: 4px 4px 7px gray;
  margin: 1rem auto;
  padding-bottom: 0.4rem;
  max-width: 360px;
}

.card--info div,
.card--actions {
  margin: 1rem;
  padding: 0 0.5rem;
}

.title {
  font-size: 1.2rem;
  font-weight: 500;
  letter-spacing: 0.123em;
  font-weight: bold;
}

.author {
  color: var(--gray);
  line-height: 1.375rem;
}

.card--about {
  color: var(--gray);
  font-size: 1.2rem;
}

.over-media {
  position: absolute;
  top: 35%;
}

.over-media :is(.author, .title) {
  color: var(--white);
}

.card--actions {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.flex-start {
  justify-content: flex-start;
}

.flex-end {
  justify-content: flex-end;
}

.action-link {
  color: var(--blue);
  padding: 0.4rem;
}

.action-link:hover {
  background-color: var(--ligh-blue-background);
  border-radius: 6px;
}

.action-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.5rem;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: var(--gray);
  text-align: center;
}

.action-icon i {
  font-size: 20px;
  color: inherit;
}

.action-icon:hover {
  background-color: var(--light-gray-background);
  color: black;
}

